2013-01-21	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* content/bgkeyring/*: Healing services were not charging any money.
	Rev 7319
	* all: World-wrapping for finding directions.
	Rev 7320
	* combat.cc: Fixed error introduced in rev 7296, allowing people to keep on
	  attacking turned-invisible foes.

2013-01-20	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* content/makefile_builder.sh: Updated to work without doing a 'clean'.
	* content/{bgkeyring,sifixes}/{README,Readme.txt}: Massive update, clean-up
	  and reformatting.
	Rev 7312
	* combat.cc: Combat music should start if the avatar is targetting an NPC.
	Rev 7313
	* actors.cc: Doing a raw intelligence check causes some animals to be able
	  to open doors; so I am basing the sentince test only on monster intellect,
	  which is 10 for 'default' monster information.
	Rev 7314
	* all: Research into the originals shows that only neutral NPCs and guards
	  call guards -- good NPCs ignore theft, murder and being attacked, evil and
	  chaotic are out for your blood anyway. Based on this, I revamped the call
	  guards/attack avatar bit so only neutral NPCs and guards call guards and
	  NPCs of all alignments help NPCs of the same alignment, while ignoring any
	  friendly fire. Disabled actors no longer call for help -- instead, if any
	  sympathetic witnesses are nearby, they will call for help and assist.
	Rev 7315
	* gamewin.cc: Fixed bug #3601519 "Breaking glass displays results in guards
	  attacking" by having guards try to arrest for theft on all cases.
	Rev 7316
	* all: Alignments are an enum of Actor class, not Npc_actor.
	* gamewin.cc: Crickets are now random, instead of adding large random delays
	  to background music change. Defined private enum for BGM states.
	Rev 7317
	* actors.cc: Partially reverted rev #7304 as it breaks BG intro.
	* monsters.cc: Don't ask for tile before we know we have one (reduces stdout
	  noise).

2013-01-19	Marzo Sette Torres Junior <marzojr@yahoo.com>