@@ -26,7 +26,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
 class Gump_button : public Gump_widget
 {
-	UNREPLICATABLE_CLASS(Gump_button);
+	UNREPLICATABLE_CLASS_I(Gump_button, Gump_widget(0, 0, 0, 0));
 
 private:
 	int pushed_button;		// 1 if in pushed state.
